--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -21,6 +21,7 @@
             <li><a href="{{ '/all-projects/' | url }}">专题</a></li>
             <li><a href="{{ '/all-tags/' | url }}">标签</a></li>
             <li><a href="{{ '/all-speakers/' | url }}">演讲者</a></li>
+            <li><a href="http://localhost:3333" target="_blank" rel="noopener">🔍 语义搜索</a></li>
             <li><a href="{{ '/tool/' | url }}">工具</a></li>
             <li><a href="{{ '/bookshelf/' | url }}">书架</a></li>
             <li><a href="{{ '/about/' | url }}">关于</a></li>
